# eventlab

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: backtest_summary.csv  backtest_trades.csv  calibration_curve.csv  data_sources.csv  features.csv  mispricing_scanner.csv  model_predictions.csv
data/raw/: events.csv  historical_fomc_training.csv  macro_observations.csv  market_prices.csv  markets.csv
docs/: CODE_WALKTHROUGH.md  DEPLOYMENT.md  RUNBOOK.md
notebooks/: README.md
src/eventlab/: __init__.py  config.py  utils.py
src/eventlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eventlab/analysis/: backtest.py  mispricing.py
src/eventlab/dashboard/: streamlit_app.py
src/eventlab/db/: load_data.py  schema.sql
src/eventlab/features/: build_features.py
src/eventlab/ingestion/: fred_client.py  kalshi_client.py  polymarket_client.py  public_live_data.py
src/eventlab/models/: bayesian_pricer.py  calibration.py
src/eventlab/scripts/: __init__.py  run_pipeline.py
tests/: test_bayesian_pricer.py  test_calibration.py  test_pipeline.py  test_public_live_data.py
